--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "first-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dimon0010.github.io/first-app",
   "dependencies": {
-    "axios": "^0.19.0",
+    "@types/classnames": "^2.2.9",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/redux-form": "^8.2.2",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-redux": "^7.1.1",
-    "react-router-dom": "^5.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
@@ -19,7 +24,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "build1": "tsc"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "react-test-renderer": "^16.9.0"
+    "gh-pages": "^2.2.0",
+    "react-test-renderer": "^16.12.0",
+    "typescript": "^3.7.5"
   }
 }
